--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native-wifi",
+  "name": "react-native-wifi-gamgee",
   "version": "1.0.4",
   "description": "A react-native implementation for viewing and connecting to Wifi networks on Android and iOS devices.",
   "main": "index.js",
@@ -17,15 +17,15 @@
   "author": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blackdeve/react-native-wifi.git"
+    "url": "git+https://github.com/GamgeeNL/react-native-wifi.git"
   },
   "peerDependencies": {
-    "react-native": ">=0.13"
+    "react-native": ">=0.56"
   },
   "dependencies": {},
   "bugs": {
-    "url": "https://github.com/blackdeve/react-native-wifi/issues"
+    "url": "https://github.com/GamgeeNLreact-native-wifi/issues"
   },
-  "homepage": "https://github.com/blackdeve/react-native-wifi#readme",
+  "homepage": "https://github.com/GamgeeNL/react-native-wifi#readme",
   "license": "ISC"
 }
